refactor(config): 重构股票表格列配置
- 将单个 stockTableColumnConfig 拆分为 normalStockTableColumnConfig 和 hiddenStockTableColumnConfig
- 添加 getStockTableColumnConfig 和 setStockTableColumnConfig 方法，支持根据显示模式获取和设置列配置
- 重构 persistStockTableColumnConfig 和 getStockTableColumnConfig 方法，优化列配置的持久化和加载逻辑
- 新增 reOrderTableColumn 方法，用于重新排序表格列
- 优化 getStockTableColumnInfoOrder 方法，改进列顺序的获取逻辑
- 更新 StockWindow 中的相关调用，以适应新的列配置结构